--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h1 class="font-medieval text-6xl text-amber-300 mb-8">Choose Your Adventure</h1>
     <div id="game-list" class="w-full max-w-md">
         <div class="game-card bg-gray-800 p-6 rounded-lg shadow-xl border border-gray-700">
-            <h2 class="font-medieval text-3xl text-amber-200 text-center">Hero's Gambit</h2>
-            <p class="text-gray-400 text-center mb-6">A chess-based puzzle game where you must defeat monsters.</p>
-
-            <a href="heros-gambit.html" class="block w-full text-center bg-amber-600 hover:bg-amber-700 text-white font-bold py-2 px-4 rounded transition duration-300 mb-4">Start from Beginning</a>
-
+            <h2 class="font-medieval text-3xl text-amber-200 text-center">Drigolarveo</h2>
+            <p class="text-gray-400 text-center mb-6">A puzzle game where you must defeat a monster set, by your opponent.</p>
+            
+            <a href="Drigolarveo.html" class="block w-full text-center bg-amber-600 hover:bg-amber-700 text-white font-bold py-2 px-4 rounded transition duration-300 mb-4">Start from Beginning</a>
+            
             <div class="flex items-center border-t border-gray-700 pt-4">
                 <input type="text" id="level-code-input" placeholder="Enter level code" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-amber-500 focus:border-amber-500 block w-full p-2.5 mr-2">
                 <button id="go-to-level-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-300">Go</button>
